@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.2-3.004
-Date: 2023-09-18
+Version: 3.2-3.005
+Date: 2023-09-27
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
