@@ -6,4 +6,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2023-05-10" "3.2-0" 234 523 0 31541 6365
 "2023-05-13" "3.2-1" 234 523 0 31561 6365
 "2023-09-07" "3.2-3" 235 523 0 31638 6365
-"2023-09-18" "3.2-3.004" 236 524 0 31680 6365
+"2023-09-27" "3.2-3.005" 236 524 0 31711 6365
